# gtk-alsamixer

./: .gitignore  Makefile  Makefile.am  NEWS  README.md  configure.ac.in  xfce4-alsamixer.desktop.in
alsamixer/: Makefile.am  gam-app.c  gam-app.h  gam-main.c  gam-mixer.c  gam-mixer.h  gam-slider-dual.c  gam-slider-dual.h  gam-slider-pan.c  gam-slider-pan.h  gam-slider.c  gam-slider.h  gam-toggle.c  gam-toggle.h  volume_mapping.c  volume_mapping.h
doc/: Makefile.am  xfce4-alsamixer.xml
icons/128x128/: Makefile.am
icons/16x16/: Makefile.am
icons/24x24/: Makefile.am
icons/32x32/: Makefile.am
icons/48x48/: Makefile.am
icons/scalable/: Makefile.am
po/: POTFILES.in
